kubernetes/bank-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-management
  template:
    metadata:
      labels:
        app: bank-management
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: bank-management
          image: mlustig/bank-management:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bank-management
spec:
  selector:
    app: bank-management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
