kubernetes/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /management
            pathType: Prefix
            backend:
              service:
                name: bank-management
                port:
                  number: 8080
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
